what exactly and actually happened 76th session/3.txt
The v40.52 functions are implemented and integrated. Now let me check if there are any JavaScript syntax errors:
Action: $ node -c "/app/Lichess Bot-AlphaZero-Pure.user.js" 2>&1
Observation: /app/Lichess Bot-AlphaZero-Pure.user.js:30996
}
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v20.19.5
Exit code: 1